@@ -1,3 +1,5 @@
+* new feature to color the graph background in sync with the loss -- grahame.bo
+
 2006/6/27 -- released version 20060627_trunk
 
 2006/6/26 -- released version 20060626_trunk
